@@ -21,11 +21,6 @@
 #include "sysinfo.h"
 #include "zbxregexp.h"
 
-#define DO_SUM 0
-#define DO_MAX 1
-#define DO_MIN 2
-#define DO_AVG 3
-
 int	PROC_MEM(AGENT_REQUEST *request, AGENT_RESULT *result)
 {
 	DIR	*dir;
@@ -62,13 +57,13 @@ int	PROC_MEM(AGENT_REQUEST *request, AGENT_RESULT *result)
 	param = get_rparam(request, 2);
 
 	if (NULL == param || '\0' == *param || 0 == strcmp(param, "sum"))	/* default parameter */
-		do_task = DO_SUM;
+		do_task = ZBX_DO_SUM;
 	else if (0 == strcmp(param, "avg"))
-		do_task = DO_AVG;
+		do_task = ZBX_DO_AVG;
 	else if (0 == strcmp(param, "max"))
-		do_task = DO_MAX;
+		do_task = ZBX_DO_MAX;
 	else if (0 == strcmp(param, "min"))
-		do_task = DO_MIN;
+		do_task = ZBX_DO_MIN;
 	else
 		return SYSINFO_RET_FAIL;
 
@@ -115,9 +110,9 @@ int	PROC_MEM(AGENT_REQUEST *request, AGENT_RESULT *result)
 			}
 			else
 			{
-				if (DO_MAX == do_task)
+				if (ZBX_DO_MAX == do_task)
 					memsize = MAX(memsize, (double) (psinfo.pr_rssize * pgsize));
-				else if (DO_MIN == do_task)
+				else if (ZBX_DO_MIN == do_task)
 					memsize = MIN(memsize, (double) (psinfo.pr_rssize * pgsize));
 				else	/* SUM */
 					memsize +=  (double) (psinfo.pr_rssize * pgsize);
@@ -136,14 +131,10 @@ lbl_skip_procces:
 		memsize = 0;
 	}
 
-	if (DO_AVG == do_task)
-	{
+	if (ZBX_DO_AVG == do_task)
 		SET_DBL_RESULT(result, proccount == 0 ? 0 : ((double)memsize/(double)proccount));
-	}
 	else
-	{
 		SET_UI64_RESULT(result, memsize);
-	}
 
 	return SYSINFO_RET_OK;
 }
